# ocr-cookiecutter

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  cdk.json  docker_deploy.sh  pyproject.toml
cdk.out/: OCR-API.assets.json  OCR-API.template.json  manifest.json  tree.json
infra/: components.py  stack.py
src/api/: __init__.py  handler.py  schema.py  scratch.py
src/api/core/: config.py
src/api/core/data/: schema.py
src/api/core/routes/: document.py  ocr.py
src/api/routes/: document.py  ocr.py
src/authorizer/: handler.py
src/common/aws/: dynamo.py  s3.py  textract.py
src/postprocess/: handler.py
src/preprocess/: handler.py
